# Inflatables

./: .gitignore  .gitmodules  BendingEnergy.hh  CMakeLists.txt  CollapseBarrier.hh  CollapsePreventionEnergy.hh  CompressionPenalty.hh  DualLaplacianStencil.cc  DualLaplacianStencil.hh  DualMesh.hh  EigSensitivity.hh  FusingCurveSmoothness.hh  IncompressibleBalloonEnergy.hh  IncompressibleBalloonEnergyWithHessProjection.hh  InflatableSheet.cc  InflatableSheet.hh  InflatedSurfaceAnalysis.cc  InflatedSurfaceAnalysis.hh  LICENSE  MetricFitter.cc  MetricFitter.hh  MetricFittingEnergy.hh  Nondimensionalization.hh  README.md  ReducedSheetOptimizer.hh  SVDSensitivity.hh  SheetOptimizer.cc  SheetOptimizer.hh  SurfaceSampler.cc  SurfaceSampler.hh  TargetAttractedInflation.cc  TargetAttractedInflation.hh  TargetSurfaceFitter.cc  TargetSurfaceFitter.hh  TensionFieldEnergy.hh  TubeRemesh.hh  WallPositionInterpolator.hh  circular_mean.hh  curvature.cc  curvature.hh  (+9 more)
cmake/: FindLIBIGL.cmake
examples/: full_sphere.msh  half_sphere.msh  julius.msh  paraboloid.hh
python/: boundaries.py  fabrication.py  fd_validation.py  hpc_optimization_job.py  inflation_pressure_analysis.py  measurements.py  opt_config.py  optimize_sheet_cli.py  parametric_pillows.py  register_inflation_frames.py  reinflate.py  remeshing_utils.py  sheet_meshing.py  sheet_optimizer.py  utils.py  visualization.py  wall_width_formulas.py  write_line_mesh.py
python/Demos/: ConcentricCircles.ipynb  ForwardDesign.ipynb  Lilium.ipynb  LogSpiral.ipynb
python/Demos/data/ForwardDesign/: example_holePts.txt
python_bindings/: CMakeLists.txt  extended_precision.hh  inflation.cc  mesh_utilities.cc  metric_fit.cc  parametrization.cc  wall_generation.cc
tests/: CMakeLists.txt  catch2_main.cc  catch2_svd_tests.cc  catch2_tf_validation.cc  test_balloon_energy.cc  test_eig_sensitivity.cc  test_newton.cc  test_subdivide.cc  test_svd_sensitivity.cc  test_tension_field_energy.cc
wall_generation/: CMakeLists.txt  evaluate_stripe_field.cc  evaluate_stripe_field.hh  extract_contours.cc  extract_contours.hh
