pybind11_add_module(mesh_utilities mesh_utilities.cc ../SurfaceSampler.cc)
set_target_properties(mesh_utilities PROPERTIES CXX_STANDARD 14)
set_target_properties(mesh_utilities PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(mesh_utilities PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/python)
target_link_libraries(mesh_utilities PUBLIC MeshFEM igl::core intel_pybind_14_hack)

pybind11_add_module(inflatables_parametrization parametrization.cc)
set_target_properties(inflatables_parametrization PROPERTIES CXX_STANDARD 14)
set_target_properties(inflatables_parametrization PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(inflatables_parametrization PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/python)
target_link_libraries(inflatables_parametrization PUBLIC parametrization_lib intel_pybind_14_hack)

pybind11_add_module  (metric_fit metric_fit.cc)
set_target_properties(metric_fit PROPERTIES CXX_STANDARD 14)
set_target_properties(metric_fit PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(metric_fit PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/python)
target_link_libraries(metric_fit PUBLIC metric_fit_lib intel_pybind_14_hack)

pybind11_add_module(inflation inflation.cc)
set_target_properties(inflation PROPERTIES CXX_STANDARD 14)
set_target_properties(inflation PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(inflation PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/python)
target_link_libraries(inflation PUBLIC inflation_lib intel_pybind_14_hack)

pybind11_add_module(wall_generation wall_generation.cc)
set_target_properties(wall_generation PROPERTIES CXX_STANDARD 14)
set_target_properties(wall_generation PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(wall_generation PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/python)
target_link_libraries(wall_generation PUBLIC wallgen_lib intel_pybind_14_hack)
